Fix background for portrait & landscape on iPhone
Only tested on iphone 6.

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -8,6 +8,15 @@ section {
 header {
   background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/images/jetty-and-rope.jpeg') no-repeat center top fixed;
   background-size: cover;
+
+  @media (max-device-width: 667px) and (orientation: landscape) {
+    background-size: 100vw auto;
+  }
+
+  @media (max-device-width: 667px) and (orientation: portrait) {
+    background-size: auto 100vh;
+  }
+
   font-family: 'Voltaire', sans-serif;
   font-size: 4.5em;
   min-height: 100vh;
